--- a/profile.css
+++ b/profile.css
@@ -16,3 +16,35 @@ top:80%;
 left:54%;
 transform:translate(-50%,-50%);
 }
+::-webkit-input-placeholder {
+   color: red;
+   font-size:15px;
+}
+.icon-success {
+    color: #5CB85C;
+	padding:0px;
+}
+hr{
+border:1px solid black;
+}
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+}
