--- a/profile.css
+++ b/profile.css
@@ -13,17 +13,17 @@ width:300px;
 height:300px;
 z-index:-1;
 }
-.Edit{
-position:relative;
-top:143px;
-right:30px;
+#Edit{
+position:absolute;
+left:64%;
+top:56%;
 }
 #contents
 {
 position:fixed;
 margin:0 auto;
 position:absolute;
-top:80%;
+top:85%;
 left:54%;
 transform:translate(-50%,-50%);
 
